# .github

./: .coverage  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  bump_version.py  check_all.py  coverage.xml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_tests.py  signed.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-close-prs.yml  ci.yml  cla.yml  release.yml  test-trigger.yml  update-org-activity.yml
.kilo/: KILO_SETUP.md  kilo.json
docs/: README.md  coverage.md  current_state.md  workflows.md
profile/: README.md  readme.md
scripts/: commit-msg  gui-e2e.py  rewrite_msg.sh  update-org-activity.mjs
tests/: test_e2e.py  test_main.py
