[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-tui"
version = "0.1.1"
description = "A simple TUI for Git operations"
authors = [{name = "<Your Name or Org>"}]
dependencies = [
    "textual",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "textual[test]",
    "bandit",
    "ruff",
]
postgres = [
    "psycopg2-binary",
]

[project.scripts]
git-tui = "main:main"

[tool.ruff]
line-length = 88
target-version = "py314"