[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-gui"
version = "0.1.2"
description = "A simple GUI for Git operations"
authors = [{name = "Niladri Das"}]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "bandit",
    "ruff",
]
postgres = [
    "psycopg2-binary",
]

[project.scripts]
git-gui = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["main*"]
exclude = ["tests*", "docs*", "scripts*", "images*", "profile*"]

[tool.ruff]
line-length = 88
target-version = "py314"
